--- a/partials/query.editor.html
+++ b/partials/query.editor.html
@@ -12,6 +12,7 @@
 						ng-blur="ctrl.targetBlur()">
 			</input>
 		</div>
+		<!--
 		<div class="gf-form">
 			<label class="gf-form-label query-keyword">
 				Aggregator
@@ -26,6 +27,8 @@
 		 	 </select>
 			</div>
 		</div>
+		-->
+		<!--
 			<div class="gf-form max-width-20">
 				<label class="gf-form-label query-keyword width-6">
 					Alias:
@@ -40,10 +43,11 @@
 								data-min-length=0 data-items=100
 								ng-blur="ctrl.targetBlur()"></input>
 			</div>
-
+		 
 			<div class="gf-form gf-form--grow">
 				<div class="gf-form-label gf-form-label--grow"></div>
 			</div>
+		-->
 	</div>
 
 	<div class="gf-form-inline">
@@ -86,9 +90,32 @@
 										on-change="ctrl.targetBlur()">
 		</gf-form-switch>
 
+		<gf-form-switch class="gf-form" label="Rate" label-class="width-6 query-keyword" checked="ctrl.target.shouldComputeRate" on-change="ctrl.targetBlur()">
+		</gf-form-switch>
+		<!--
+		<gf-form-switch ng-hide="!ctrl.target.shouldComputeRate"
+										class="gf-form" label="Counter" label-class="query-keyword" checked="ctrl.target.isCounter" on-change="ctrl.targetBlur()">
+		</gf-form-switch>
+		-->
+
+	    <gf-form-switch class="gf-form" label="EWMA" label-class="width-6 query-keyword" checked="ctrl.target.shouldEWMA" on-change="ctrl.targetBlur()">
+		</gf-form-switch>
+	    <div class="gf-form max-width-25" ng-hide="!ctrl.target.shouldEWMA">
+			<label class="gf-form-label query-keyword width-8">Decay</label>
+			<input type="text" class="gf-form-input"
+						 ng-model="ctrl.target.decay"
+						 ng-model-onblur
+			       ng-change="ctrl.targetBlur()"
+			       placeholder="decay value"></input>
+			<info-popover mode="right-absolute">
+				blank for auto, or for example <code>0.5</code>
+			</info-popover>
+		</div>
+
 		<div class="gf-form gf-form--grow">
 			<div class="gf-form-label gf-form-label--grow"></div>
 		</div>
+
 	</div>
 
 	<div class="gf-form-inline" ng-if="ctrl.tsdbVersion >= 2">
@@ -155,7 +182,8 @@
 					<a ng-click="ctrl.addFilter()" ng-hide="ctrl.errors.filters">add filter</a>
 					<a ng-click="ctrl.closeAddFilterMode()">
 						<i class="fa fa-remove"></i>
-					</a>
+					</a>		<gf-form-switch class="gf-form" label="Rate" label-class="width-8 query-keyword" checked="ctrl.target.shouldComputeRate" on-change="ctrl.targetBlur()">
+		</gf-form-switch>
 				</label>
 			</div>
 
@@ -215,43 +243,6 @@
 				<a ng-click="ctrl.addTag()" ng-hide="ctrl.errors.tags">add tag</a>
 				<a ng-click="ctrl.closeAddTagMode()"><i class="fa fa-remove"></i></a>
 			</label>
-		</div>
-
-		<div class="gf-form gf-form--grow">
-			<div class="gf-form-label gf-form-label--grow"></div>
-		</div>
-	</div>
-
-	<div class="gf-form-inline">
-		<gf-form-switch class="gf-form" label="Rate" label-class="width-8 query-keyword" checked="ctrl.target.shouldComputeRate" on-change="ctrl.targetBlur()">
-		</gf-form-switch>
-
-		<gf-form-switch ng-hide="!ctrl.target.shouldComputeRate"
-										class="gf-form" label="Counter" label-class="query-keyword" checked="ctrl.target.isCounter" on-change="ctrl.targetBlur()">
-		</gf-form-switch>
-
-
-		<div class="gf-form" ng-hide="!ctrl.target.isCounter || !ctrl.target.shouldComputeRate">
-			<label class="gf-form-label query-keyword">Counter Max</label>
-			<input type="text" class="gf-form-input"
-					 	 ng-disabled="!ctrl.target.shouldComputeRate"
-						 ng-model="ctrl.target.counterMax" spellcheck='false'
-						 placeholder="max value" ng-model-onblur
-						 ng-blur="ctrl.targetBlur()">
-			</input>
-
-			<label class="gf-form-label query-keyword">Reset Value</label>
-			<input type="text" class="tight-form-input input-small"
-					   ng-disabled="!ctrl.target.shouldComputeRate"
-						 ng-model="ctrl.target.counterResetValue" spellcheck='false'
-						 placeholder="reset value" ng-model-onblur
-						 ng-blur="ctrl.targetBlur()">
-			</input>
-		</div>
-
-		<div class="gf-form" ng-if="ctrl.tsdbVersion > 2">
-			<gf-form-switch class="gf-form" label="Explicit tags" label-class="width-8 query-keyword" checked="ctrl.target.explicitTags" on-change="ctrl.targetBlur()">
-			</gf-form-switch>
 		</div>
 
 		<div class="gf-form gf-form--grow">
