--- a/src/partials/query.editor.html
+++ b/src/partials/query.editor.html
@@ -33,6 +33,21 @@
 						ng-trim="false" 
 						ng-blur="ctrl.targetBlur()">
 			</input>
+			<info-popover mode="right-absolute">
+				display alias instead of full name, insert tags using <code>$tag-name</code>
+			</info-popover>
+		</div>
+	  <div class="gf-form max-width-25">
+			<label class="gf-form-label query-keyword width-6">Top-N</label>
+			<input type="text" class="gf-form-input"
+					   ng-init="ctrl.target.topN=5"
+						 ng-model="ctrl.target.topN"
+						 ng-model-onblur
+			       ng-change="ctrl.targetBlur()"
+			       placeholder="Select Top N"></input>
+			<info-popover mode="right-absolute">
+				limit number of series; blank to disable, or for example <code>5</code>
+			</info-popover>
 		</div>
 		<div class="gf-form gf-form--grow">
 			<div class="gf-form-label gf-form-label--grow"></div>
@@ -87,23 +102,6 @@
 			</label>
 		</div>
 
-		<div class="gf-form gf-form--grow">
-			<div class="gf-form-label gf-form-label--grow"></div>
-		</div>
-	</div>
-
-	<div class="gf-form-inline">
-	    <div class="gf-form max-width-25">
-			<label class="gf-form-label query-keyword width-8">Top-N</label>
-			<input type="text" class="gf-form-input max-width-8"
-						 ng-model="ctrl.target.topN"
-						 ng-model-onblur
-			       ng-change="ctrl.targetBlur()"
-			       placeholder="Select Top N"></input>
-			<info-popover mode="right-absolute">
-				blank to disable, or for example <code>5</code>
-			</info-popover>
-		</div>
 		<div class="gf-form gf-form--grow">
 			<div class="gf-form-label gf-form-label--grow"></div>
 		</div>
